fixed icon spacing, logo spacing, and centered site on large screen

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 .site-wrapper {
   max-width: 1440px;
   padding: 0 2.1875rem 0 2.1875rem;
+  margin: auto;
   
 }
 
@@ -84,7 +85,10 @@ padding-bottom: 1.5rem;
   cursor: pointer;
   color: white;
   background-color: var(--magenta);
+}
 
+.reg-btn:focus{
+  background-color: var(--magenta);
 }
 
 .social-icons {
@@ -92,6 +96,7 @@ padding-bottom: 1.5rem;
   margin-top: 3.75rem;
   display: flex;
   justify-content: center;
+  gap: 1rem;
 }
 
 ion-icon {
@@ -124,20 +129,19 @@ ion-icon:hover {
   .logo {
     padding-top: 4rem;
     width: 12.5rem;
-    margin-left: 4.78125rem;
+    /* margin-left: 4.78125rem; */
     margin-bottom: 6.5rem;
   }
 
-
   .hero {
     flex-direction: row;
-    
+    gap: 3.75rem; 
   }
 
   .info {
     text-align: start;
     max-width: 520px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
   }
 
   h2 {
@@ -145,7 +149,6 @@ ion-icon:hover {
   }
 
   p {
-    
     font-size: 1.125rem;
   }
 
@@ -163,6 +166,19 @@ ion-icon:hover {
 
   .social-icons {
     justify-content: flex-end;
+  }
+}
+
+@media screen and (min-width: 61.875em){
+  .social-icons {
+    margin-top: 1.6875rem;
+  }
+}
+
+@media screen and (min-width: 84.6875em) {
+  .logo {
+    margin-left: 1.78125rem;
+
   }
 }
 
